# dataengineering_projects

./: .gitignore  README.md  main.py  pyproject.toml
.github/: test.yaml
.github/workflows/: test.yaml
tests/chembl/: load_data_test.py
