[project]
name = "dataengineering-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "responses>=0.26.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "pytest-responses>=0.5.1",
]
